secondfile/objects/EVC_Details__c.object
<CustomObject>
    <fields>
        <fullName>COS_Value__c</fullName>
        <label>COS Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>COS</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>EVC Details (COS)</relationshipLabel>
        <relationshipName>EVC_Details1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Committed_Info_Rate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Committed Info Rate</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>EVC Details</relationshipLabel>
        <relationshipName>EVC_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EVC_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EVC From</label>
        <referenceTo>AT_T_Customer_Site_Quote__c</referenceTo>
        <relationshipLabel>EVC Details</relationshipLabel>
        <relationshipName>EVC_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EVC_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EVC To</label>
        <referenceTo>AT_T_Customer_Site_Quote__c</referenceTo>
        <relationshipLabel>EVC Details (EVC To)</relationshipLabel>
        <relationshipName>EVC_Details1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>EVC Detail</label>
    <nameField>
        <label>EVC Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EVC Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>